--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-markdown": "^10.1.0",
     "reactflow": "^11.11.4",
     "remark-gfm": "^4.0.1",
+    "resend": "^6.0.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.76"
   },
