--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@calcom/embed-react": "^1.5.3",
     "@next/third-parties": "^15.5.2",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/supabase-js": "^2.54.0",
