Created module to create s3 bucket

--- a/aws/terraform/environments/sandbox/demos/rds-to-s3/terraform.tfvars.example
+++ b/aws/terraform/environments/sandbox/demos/rds-to-s3/terraform.tfvars.example
@@ -1,7 +1,2 @@
-# Copy this file to terraform.tfvars and update the values
-
-# S3 configuration
-s3_bucket = "your-demo-data-lake-bucket"
-
-# Optional: KMS key for S3 encryption
-# s3_kms_key_arn = "arn:aws:kms:us-west-1:123456789012:key/12345678-1234-1234-1234-123456789012"
+# Copy this file to terraform.tfvars and update the values if needed
+# No variables required for the demo; S3 bucket is created by module.
