--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0",
     "reactflow": "^11.11.4",
+    "recharts": "^2.15.4",
     "remark-gfm": "^4.0.1",
     "resend": "^6.0.1",
     "tailwind-merge": "^3.3.1",
